--- a/styles/global.css
+++ b/styles/global.css
@@ -1,1 +1,159 @@
+html, 
+body {
+    padding: 0;
+    margin: 0;
+    font-family: 'Source Serif Pro', serif;
+    line-height: 1.6;
+    font-size: 18px;
+}
 
+h1 {
+    margin: 0;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+a {
+    color: #0070f3;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+/** LAYOUT **/
+.m_grid {
+    display: grid;
+}
+
+.m_grid1 {
+    grid-template-columns: 1fr;
+}
+
+.m_grid2 {
+    grid-template-columns: 1fr 1fr;
+}
+
+.m_grid3 {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.m_grid4 {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.m_grid5 {
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.m_grid6 {
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.m_grid7 {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.m_gridCol2 {
+    grid-column: span 2;
+}
+
+.m_gridGap {
+    grid-column-gap: 25px;
+}
+
+.m_card {
+    border-style: solid;
+    border-width: 4px;
+    border-radius: 3px;
+    padding: 2rem 3rem;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 2.5rem;
+    text-align: center;
+    cursor: pointer;
+}
+
+.m_card:hover {
+    -webkit-box-shadow: 4px 9px 31px -2px rgba(7,2,2,0.48); 
+    box-shadow: 4px 9px 31px -2px rgba(7,2,2,0.48);
+    
+}
+
+.m_card:hover .m_cardLink {
+    text-decoration: underline;
+}
+
+.m_cardLink {
+    color: #070202;
+    position: relative;
+    display: block;
+}
+
+.m_cardLink:before {
+    content: '';
+    background-color: #FFCC00;
+    width: 100%;
+    height: 1em;
+    position: absolute;
+    z-index: -1;
+    filter:url(#marker-shape);
+    left: -0.25em;
+    top: 0.1em;
+    padding: 0.1em 0.25em;
+}
+
+.m_cardTitle {
+    font-family: 'Bebas Neue', sans-serif;
+    text-transform: uppercase;
+    font-size: 2.5rem;
+    text-align: center;
+}
+
+/** COLORS **/ 
+.u_bgBlue1 {
+    background-color: #5495D6;
+}
+
+.u_textBlue1 {
+    background-color: #5495D6;
+}
+
+.u_borderBlue1 {
+    border-color: #5495D6;
+}
+
+.u_bgBlue2 {
+    background-color: #3A49B2;
+}
+
+.u_textBlue2 {
+    color: #3A49B2;
+}
+
+.u_borderBlue2 {
+    border-color: #3A49B2;
+}
+
+.u_circle {
+    border-style: hidden;
+    border-width: 1px;
+    border-radius: 50%;
+}
+
+/** TYPE **/ 
+.u_quote {
+    text-align: center;
+    font-family: 'Yellowtail', cursive;
+    font-size: 2rem;
+    margin: 0;
+    color: #3A49B2;
+}
+
+.u_center {
+    text-align: center;
+}
